# kymco_maxxer90_robot

./: LICENSE  README.md  irta_sim.rviz
compare/: CMakeLists.txt  package.xml
compare/launch/: compare_vel.launch  compare_vel_or_poses.launch
compare/src/: comp.cpp
kymco_maxxer90_bringup/: CMakeLists.txt  ftdi_sio.sh  package.xml
kymco_maxxer90_bringup/config/: teleop.yaml  twist_mux.yaml
kymco_maxxer90_bringup/include/kymco_maxxer90_motor_controller/: common.hpp  kymco_maxxer90_hw.hpp  kymco_maxxer90_hw2.hpp
kymco_maxxer90_bringup/launch/: driver.launch  joy_teleop.launch  rs_camera.launch  usb_camera.launch
kymco_maxxer90_bringup/scripts/test/: test_motor_driver.py  test_new_motor_driver.py  test_spraying_board.py
kymco_maxxer90_bringup/src/: kymco_maxxer90_hw.cpp  kymco_maxxer90_hw2.cpp  motor_controller.cpp  motor_controller2.cpp
kymco_maxxer90_control/: CMakeLists.txt  package.xml
kymco_maxxer90_control/config/: ackermann_control.yaml
kymco_maxxer90_control/launch/: control.launch
kymco_maxxer90_description/: CMakeLists.txt  package.xml
kymco_maxxer90_description/launch/: description.launch
kymco_maxxer90_description/meshes/: chassis.stl  differential.stl  engine.stl  exhaust_tip.stl  spring.stl  wheel.stl
kymco_maxxer90_description/urdf/: front_wheel.urdf.xacro  kymco_maxxer90.urdf.xacro  wheel.urdf.xacro
kymco_maxxer90_gazebo/: CMakeLists.txt  package.xml
kymco_maxxer90_gazebo/launch/: empty_world.launch  kymco_maxxer90_empty_world.launch  kymco_maxxer90_vineyard_world.launch  spawn_kymco_maxxer90.launch
kymco_maxxer90_gazebo/worlds/: em.world  empty.world  vineyard.world  vineyard2.world  whatev.world
kymco_maxxer90_navigation/: CMakeLists.txt  package.xml
kymco_maxxer90_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  ekf_localization.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  sbpl_lattice_planner_params.yaml
kymco_maxxer90_navigation/launch/: camera.launch  estimate.launch  gps_odometry.launch  image_proc.launch  irta_demo.launch  irta_sim.launch  lidar_odometry.launch  move_base.launch  octomap_mapping_depth.launch  perfect.launch  robot_localization.launch  rs_vo.launch  rtabmap_mapping.launch  rtabmap_visual_odometry.launch  visual_odometry.launch
kymco_maxxer90_navigation/motion_primitives/: ackermann.mprim  ackermann_julia.mprim  genprim_unicycle.jl  genprim_unicycle.m
kymco_maxxer90_navigation/scripts/: insanity.py  simple_demo.py
kymco_maxxer90_robot/: CMakeLists.txt  package.xml
