<?xml version="1.0"?>
<package format="2">
  <name>kymco_maxxer90_bringup</name>
  <version>0.0.8</version>
  <description>The kymco_maxxer90_bringup package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>serial</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>


</package>
