<?xml version="1.0"?>
<package format="2">
  <name>kymco_maxxer90_gazebo</name>
  <version>0.0.1</version>
  <description>The kymco_maxxer90_gazebo package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roboticsgroup_gazebo_plugins</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>message_to_tf</exec_depend>

</package>
