<?xml version="1.0"?>
<package format="2">
  <name>kymco_maxxer90_navigation</name>
  <version>0.0.1</version>
  <description>The kymco_maxxer90_navigation package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_localization</depend>
  <depend>global_planner</depend>
  <depend>sbpl_lattice_planner</depend>
  <depend>teb_local_planner</depend>
  <depend>image_proc</depend>
  <depend>rtabmap_ros</depend>
  <depend>move_base</depend>
</package>
